# Silicon

./: CNAME  Cargo.toml  README.md  flake.nix  index.html  silicon.js  silicon_bg.wasm
assets/: sw.js
src/: app.rs  lib.rs  main.rs
src/tabs/: grid.rs  mod.rs
