[package]
name = "silicon"
version = "0.0.1"
authors = ["Maddie <maddie@spyhoodle.me>"]
edition = "2021"
rust-version = "1.60"


[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = ["persistence"]
persistence = [
    "eframe/persistence",
    "egui/persistence",
    "serde",
]
serde = [
    "dep:serde",
    "egui/serde",
]

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
# fast and small wasm
opt-level = 2
